test/typecheck/errors/before-return.boa
visit(input, visitor {
    before _ -> return;
});
